--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "project",
   "license": "GPL-2.0+",
   "require": {
-  "drupal/core": "@stable",
+	"drupal/core": "~8.3",
     "composer/installers": "^1.0.21",
     "wikimedia/composer-merge-plugin": "~1.3"
   },
